moved mount script to index.html

--- a/index.html
+++ b/index.html
@@ -23,9 +23,15 @@
 
     <!-- Import App -->
     <script src="./main.js"></script>
+
     <!-- Import Components -->
     <script src="./components/ProductDisplay.js"></script>
     <script src="./components/ReviewForm.js"></script>
     <script src="./components/ReviewList.js"></script>
+
+    <!-- Mount App -->
+    <script>
+      app.mount('#app')
+    </script>
   </body>
 </html>
