--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1>Product goes here</h1>
     </div>
 
-    <!-- Import JS -->
+    <!-- Import Js -->
     <script src="./main.js"></script>
   </body>
 </html>
