--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <!-- Mount App -->
     <script>
-      app.mount('#app')
+      const mountedApp = app.mount('#app')
     </script>
   </body>
 </html>
