--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <li v-for="detail in details">{{ detail }}</li>
             </ul>
             <div v-for="variant in variants" :key="variant.id" @mouseover="updateImage(variant.image)">{{ variant.color }}</div>
-            <button class="button" v-on:click="addToCart">Add to Cart</button>
+            <button class="button">Add to Cart</button>
           </div>
         </div>
       </div>
