--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <body>
     <div id="app">
       <h1>{{ product }}</h1>
+      <!-- Solution -->
+      <p>{{ description }}</p>
+      <!-- Solution -->
     </div>
 
     <!-- Import App -->
