--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
+            <!-- solution -->
+            <a :href="url">Made by Vue Mastery</a>
+           <!-- solution -->
           </div>
         </div>
       </div>
