--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             <h1>{{ product }}</h1>
             <p v-if="inStock">In Stock</p>
             <p v-else>Out of Stock</p>
+            <!-- solution -->
+            <p v-if="onSale">On Sale!</p>
+            <!-- solution -->
           </div>
         </div>
       </div>
