--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
             <h1>{{ product }}</h1>
             <p v-if="inStock">In Stock</p>
             <p v-else>Out of Stock</p>
+            <!-- solution -->
+            <ul>
+              <li v-for="(size, index) in sizes" :key="index">{{ size }}</li>
+            </ul>
+            <!-- solution -->
           </div>
         </div>
       </div>
