--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
       <div class="product-display">
         <div class="product-container">
           <div class="product-image">
-            <!-- solution -->
-            <img :class="{ 'out-of-stock-img': !inStock }" v-bind:src="image">
-            <!-- solution -->
+            <img v-bind:src="image">
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
@@ -30,12 +28,11 @@
             </ul>
 
             <div 
-              class="color-circle" 
               v-for="variant in variants" 
               :key="variant.id" 
               @mouseover="updateImage(variant.image)" 
-              :style="{ backgroundColor: variant.color }"></div>
-            <button class="button" :class="{ disabledButton: !inStock }" :disabled="!inStock" v-on:click="addToCart">Add to Cart</button>
+            >{{ variant.color }}</div>
+            <button class="button" v-on:click="addToCart">Add to Cart</button>
           </div>
         </div>
       </div>
