--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
           </div>
           <div class="product-info">
             <h1>{{ title }}</h1>
-
+            <!-- solution -->
+            <p>{{ sale }}</p>
+            <!-- solution -->
             <p v-if="inStock">In Stock</p>
             <p v-else>Out of Stock</p>
             <ul>
