--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 
     <!-- Import Components -->
     <script src="./components/ProductDisplay.js"></script>
+    <!-- solution -->
+    <script src="./components/ProductDetails.js"></script>
+    <!-- solution -->
 
     <!-- Mount App -->
     <script>
