--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
       <div class="nav-bar"></div>
 
       <div class="cart">Cart({{ cart.length }})</div>
-      <product-display :premium="premium"></product-display>
+      <product-display 
+        :premium="premium" 
+        @add-to-cart="updateCart"
+        @remove-from-cart="removeById">
+      </product-display>
     </div>
 
     <!-- Import App -->
