--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <product-display 
         :premium="premium" 
         @add-to-cart="updateCart"
-        @remove-from-cart="removeById">
+        @remove-from-cart="removeById"> <!-- solution -->
       </product-display>
     </div>
 
