--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
-            <p v-if="inStock">In Stock</p>
+            <p v-if="inventory > 10">In Stock</p>
+            <p v-else-if="inventory <= 10 && inventory > 0">Almost sold out!</p>
             <p v-else>Out of Stock</p>
             <!-- solution -->
             <p v-if="onSale">On Sale!</p>
