--- a/index.html
+++ b/index.html
@@ -30,12 +30,20 @@
             </ul>
 
             <div 
-              class="color-circle" 
               v-for="variant in variants" 
               :key="variant.id" 
               @mouseover="updateImage(variant.image)" 
-              :style="{ backgroundColor: variant.color }"></div>
-            <button class="button" :class="{ disabledButton: !inStock }" :disabled="!inStock" v-on:click="addToCart">Add to Cart</button>
+              class="color-circle" 
+              :style="{ backgroundColor: variant.color }">
+            </div>
+            
+            <button 
+              class="button" 
+              :class="{ disabledButton: !inStock }" 
+              :disabled="!inStock" 
+              @click="addToCart">
+              Add to Cart
+            </button>
           </div>
         </div>
       </div>
