--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="app">
       <div class="nav-bar"></div>
 
-      <div class="cart">Cart({{ cart.length }})</div>
+      <div class="cart">Cart({{ cart }})</div>
       <product-display :premium="premium"></product-display>
     </div>
 
