--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               :key="variant.id" 
               @mouseover="updateImage(variant.image)" 
             >{{ variant.color }}</div>
-            <button class="button" v-on:click="addToCart">Add to Cart</button>
+            <button class="button" @click="addToCart">Add to Cart</button>
           </div>
         </div>
       </div>
