--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
   </head>
   <body>
     <div id="app">
-      <h1>Product goes here</h1>
+      <h1>{{ product }}</h1>
+      <p>{{ productDescription }}</p>
     </div>
 
-    <!-- Import Js -->
+    <!-- Import app-->
     <script src="./main.js"></script>
+    <!-- mount the app -->
+    <script>
+      const mountedApp = app.mount('#app')
+    </script>
   </body>
 </html>
