--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img v-bind:src="image">
           </div>
           <div class="product-info">
-            <h1>{{ title }}</h1>
+            <h1 v-else>{{ title }}</h1>
             <p v-if="inStock">In Stock</p>
             <p v-else>Out of Stock</p>
             <ul>
