Took code from L2-end and put it in master and also added a line of code

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <!-- Import Styles -->
     <link rel="stylesheet" href="./assets/styles.css" />
     <!-- Import Vue.js -->
-    <script src="https://unpkg.com/vue@3.0.0-beta.12/dist/vue.global.js"></script>
+    <!-- <script src="https://unpkg.com/vue@3.0.0-beta.12/dist/vue.global.js"></script> -->
+    <script src="https://unpkg.com/vue@next"></script>
+    <script src="./main.js"></script>
+
   </head>
   <body>
     <div id="app">
@@ -14,6 +17,7 @@
       <!-- Solution -->
       <p>{{ description }}</p>
       <!-- Solution -->
+      <p>I want to {{ word }} this doc </p>
     </div>
 
     <!-- Import App -->
