--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
               <li v-for="detail in details">{{detail}}</li>
             </ul>
             <div v-for="variant in variants" :key="variant.id">{{variant.color}}</div>
+            <div v-for="size in sizes">{{size}}</div>
           </div>
         </div>
       </div>
