--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <title>Vue Mastery</title>
-    <!-- Import Styles -->
     <link rel="stylesheet" href="./assets/styles.css" />
-    <!-- Import Vue.js -->
-    <script src="https://unpkg.com/vue@3.0.0-beta.12/dist/vue.global.js"></script>
+    <script src="https://unpkg.com/vue@next"></script>
   </head>
   <body>
     <div id="app">
-      <h1>Product goes here</h1>
+      <h1>{{ product.name }}</h1>
+      <p>{{ product.description }}</p>
     </div>
 
-    <!-- Import Js -->
     <script src="./main.js"></script>
+    <script>const mountedApp = app.mount('#app')</script>
   </body>
 </html>
