--- a/index.html
+++ b/index.html
@@ -8,11 +8,24 @@
   </head>
   <body>
     <div id="app">
-      <h1>{{ product.name }}</h1>
-      <p>{{ product.description }}</p>
+      <div class="nav-bar"></div>
+
+      <div class="product-display">
+        <div class="product-container">
+          <div class="product-image">
+            <img :src="product.image" :alt="product.name">
+          </div>
+          <div class="product-info">
+            <h1>{{ product.name }}</h1>
+            <p>{{ product.description }}</p>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="./main.js"></script>
-    <script>const mountedApp = app.mount('#app')</script>
+    <script>
+      const mountedApp = app.mount("#app");
+    </script>
   </body>
 </html>
