--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
       <div class="nav-bar"></div>
 
       <div class="product-display">
-        <div class="product-container">
+        <div
+          v-for="product in products"
+          :key="products.indexOf(product)"
+          class="product-container"
+        >
           <div class="product-image">
             <img :src="product.image" :alt="product.name" />
           </div>
@@ -26,6 +30,13 @@
               <p v-else>Out of stock</p>
 
               <p v-show="product.isOnSale">On Sale!</p>
+            </div>
+            <div class="product-details">
+              <ul>
+                <li v-for="detail in product.details" :key="detail">
+                  {{ detail }}
+                </li>
+              </ul>
             </div>
           </div>
         </div>
