--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <div id="app">
       <div class="nav-bar"></div>
 
+      <div class="cart">Cart ({{ cart }})</div>
+
       <div class="product-display">
         <div
           v-for="product in products"
@@ -39,6 +41,7 @@
               </ul>
             </div>
           </div>
+          <button class="button" @click="addToCart">Add to cart!</button>
         </div>
       </div>
     </div>
