Now using a computed value... Well, sort of

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <img :src="product.image" :alt="product.name" />
           </div>
           <div class="product-info">
-            <h1>{{ product.name }}</h1>
+            <h1>{{ title }}</h1>
             <p>{{ product.description }}</p>
             <div class="product-additional-info">
               <p v-if="product.inStock > 10">In stock</p>
