--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <!-- Import Styles -->
     <link rel="stylesheet" href="./assets/styles.css" />
     <!-- Import Vue.js -->
-    <script src="https://unpkg.com/vue@3.0.0-beta.12/dist/vue.global.js"></script>
+    <script src="https://unpkg.com/vue@next"></script>
   </head>
   <body>
     <div id="app">
-      <h1>Product goes here</h1>
+      <h1>{{ product }}</h1>
+      <p>These socks feature a ribbed cushioned design with a Vans logo at the top, perfect for every occasion.80% Cotton, 18%
+      Nylon, 2% Spandex.</p>
     </div>
 
     <!-- Import Js -->
