--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
   </head>
   <body>
     <div id="app">
-      <h1>Product goes here</h1>
+      <h1>{{product}}</h1>
+      <p>{{description}}</p>
     </div>
 
     <!-- Import Js -->
     <script src="./main.js"></script>
+
+    <!-- Mount custom Vue code -->
+    <script>
+      const mountedApp = app.mount("#app");
+    </script>
   </body>
 </html>
