--- a/index.html
+++ b/index.html
@@ -6,14 +6,18 @@
     <!-- Import Styles -->
     <link rel="stylesheet" href="./assets/styles.css" />
     <!-- Import Vue.js -->
-    <script src="https://unpkg.com/vue@3.0.0-beta.12/dist/vue.global.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>></script>
   </head>
   <body>
     <div id="app">
-      <h1>Product goes here</h1>
+      <h1>{{ product }}</h1>
     </div>
 
     <!-- Import Js -->
     <script src="./main.js"></script>
+    <!-- Mount App-->
+    <script>
+      const mountedApp = app.mount('#app')
+    </script>
   </body>
 </html>
