--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Import Styles -->
     <link rel="stylesheet" href="./assets/styles.css" />
     <!-- Import Vue.js -->
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script></script>
   </head>
   <body>
     <div id="app">
