--- a/index.html
+++ b/index.html
@@ -6,10 +6,20 @@
     <!-- Import Styles -->
     <link rel="stylesheet" href="./assets/styles.css" />
     <!-- Import Vue.js -->
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script></script>
+    <script src="https://unpkg.com/vue@next"></script></script>
   </head>
   <body>
     <div id="app">
+      <div class="nav-bar"></div>
+
+      <div class="product-display">
+        <div class="product-container"></div>
+        <div class="product-image">
+<img v-bind:src="image">
+        </div>
+
+      </div>
+      <div class="product-info">
       <h1>{{ product }}</h1>
     </div>
 
