--- a/index.html
+++ b/index.html
@@ -15,12 +15,20 @@
       <div class="product-display">
         <div class="product-container"></div>
         <div class="product-image">
-<img v-bind:src="image">
+      <img v-bind:src="image">
+
         </div>
 
       </div>
       <div class="product-info">
       <h1>{{ product }}</h1>
+      <p v-if="inventory> 10">In Stock</p>
+      <p v-else-if="inventory <= 10 && inventory > 0">Almost sold out!</p>
+      <p v-else>Out of Stock</p>
+      <!--solution-->
+      <p v-if="onSale">On Sale!</p>
+      <!--solution-->
+      <a :href="url">Made in china</a>
     </div>
 
     <!-- Import Js -->
