--- a/Intro-to-Vue-3/index.html
+++ b/Intro-to-Vue-3/index.html
@@ -13,8 +13,7 @@
       <div class="nav-bar"></div>
     
       <div class="cart">Cart({{ cart }})</div>
-      <product-display></product-display>
-      <product-display></product-display>
+      <product-display :premium="premium"></product-display>
       <product-display></product-display>
     </div>
 
