--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     </div>
 
     <!-- Import Js -->
-    <script src="./main.js"></script>
+    <script src="https://unpkg.com/vue@next"></script>
   </body>
 </html>
