--- a/index.html
+++ b/index.html
@@ -17,4 +17,4 @@
     <script src="https://unpkg.com/vue@next"></script>
   </body>
 </html>
-Now what if I do this?
+Now what if I do this? OR this?
