--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
             <h1>{{ product }}</h1>
             <p v-if="inStock">In Stock</p>
             <p v-else>Out of Stock</p>
+            <ul>
+              <li v-for="detail in details">{{ detail }}</li>
+            </ul>
+            <div v-for="variant in variants" :key="variant.id">
+              {{ variant.color }} in size:
+              <ul>
+                <li v-for="size in variant.availableSizes">{{ size }}</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
