--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
       <h1>Product goes here</h1>
     </div>
 
-    <!-- Import Js -->
+    <!-- Import App -->
     <script src="./main.js"></script>
+
+    <!-- Mount App -->
+    <script>
+      const mountedApp = app.mount('#app');
+    </script>
   </body>
 </html>
