--- a/index.html
+++ b/index.html
@@ -12,11 +12,8 @@
     <div id="app">
       <div class="nav-bar"></div>
 
-      <div class="cart">Cart({{ cart }})</div>
-      <product-display :premium="premium"></product-display>
-      <product-display :premium="premium"></product-display>
-      <product-display :premium="premium"></product-display>
-         
+      <div class="cart">Cart({{ cart.length }})</div>
+      <product-display :premium="premium" @add-to-cart="updateCart"></product-display>
     </div>
 
     <!-- Import App -->
