--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 
     <!-- Import Somponents -->
     <script src="./components/ProductDisplay.js"></script>
+    <script src="./components/ReviewForm.js"></script>
+    <script src="./components/ReviewList.js"></script>
 
     <!-- Mount App -->
     <script>
