--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Import App -->
     <script src="./main.js"></script>
 
-    <!-- Import Somponents -->
+    <!-- Import Components -->
     <script src="./components/ProductDisplay.js"></script>
     <script src="./components/ReviewForm.js"></script>
     <script src="./components/ReviewList.js"></script>
