--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="product-display">
         <div class="product-container">
           <div class="product-image">
-            <img v-bind:src="image">
+            <a :href="url"><img :src="image"></a>
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
