Lesson 4 completed challenge - my answer

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
+            <p v-if="inventory > 10">In Stock</p>
+            <p v-else-if="inventory <= 10 && inventory > 0">Limited Stocks Left!</p>
+            <p v-else>Out Of Stock</p>
+            <p v-if="onSale">On Sale!</p>
           </div>
         </div>
       </div>
