my answer to coding challenge lesson 5

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
             <h1>{{ product }}</h1>
             <p v-if="inStock">In Stock</p>
             <p v-else>Out of Stock</p>
+
+            <ul>
+              <li v-for="detail in details">
+                {{ detail }}
+              </li>
+            </ul>
+            <div v-for="variant in variants" :key="variant.id">{{ variant.color }}</div>
+            <div v-for="variant in sizes" :key="variant.id">{{ variant.size }}</div>
           </div>
         </div>
       </div>
