--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
       
       <div class="product-display">
         <div class="product-container">
-          <div class="product-image">
-            <img v-bind:src="image">
+          <div class="product-image"
+               :class="{ 'out-of-stock-img': !inStock }">
+            <img :src="image">
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
@@ -30,9 +31,17 @@
             <div 
               v-for="variant in variants" 
               :key="variant.id" 
-              @mouseover="updateImage(variant.image)" 
-            >{{ variant.color }}</div>
-            <button class="button" @click="addToCart">Add to Cart</button>
+              @mouseover="updateImage(variant.image)"
+              class="color-circle"
+              :style="{ backgroundColor: variant.color }">
+            </div>
+            <button 
+              class="button" 
+              :class="{ disabledButton: !inStock }"
+              :disabled="!inStock" 
+              @click="addToCart">
+              Add to Cart
+            </button>
           </div>
         </div>
       </div>
