--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- Import Styles -->
   <link rel="stylesheet" href="./assets/styles.css" />
   <!-- Import Vue.js -->
-  <script src="https://unpkg.com/vue@3.0.11/dist/vue.global.js"></script>
+  <script src="https://unpkg.com/vue@next"></script>
 </head>
 
 <body>
