--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Import Styles -->
     <link rel="stylesheet" href="./assets/styles.css" />
     <!-- Import Vue.js -->
-    <script src="https://unpkg.com/vue@3.0.11/dist/vue.global.js"></script>
+    <script src="https://unpkg.com/vue@next"></script>
   </head>
   <body>
     <div id="app">
@@ -19,6 +19,15 @@
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
+            <p v-if="onSale === true">On Sale!</p>
+            <p v-if="inventory > 10">In Stock</p>
+            <p v-else-if="inventory <= 10 && inventory > 0">
+              Almost sold out 
+              (<small v-if="inventory > 1 && inventory <= 10 ">{{ inventory }} items</small>
+              <small v-else="inventory">{{ inventory}} item</small>
+              left!)
+            </p>
+            <p v-else>Out of Stock</p>
           </div>
         </div>
       </div>
