Finished Lesson 3 - Intro to Vue 3

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       <div class="product-display">
         <div class="product-container">
           <div class="product-image">
-            <!-- image goes here -->
+            <img :src="image" :alt="description">
+            <a :href="url">Link </a>
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
