--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
-            <p v-if="inStock">In Stock</p>
+            <p v-show="inStock">In Stock</p>
             <p v-else>Out of Stock</p>
           </div>
         </div>
