Completed coding challenge: added onSale property to data object and used it to conditionally render a paragraph

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <p v-if="inventory > 10">In Stock</p>
             <p v-else-if="inventory <=10 && inventory > 0">Almost sold out!</p>
             <p v-else>Out of Stock</p>
+            <p v-if="onSale">On Sale</p>
           </div>
         </div>
       </div>
