--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
           </div>
           <div class="product-info">
             <h1>{{ title }}</h1>
-            <p v-if="inventory > 10">In Stock</p>
-            <p v-else-if="inventory <= 10 && inventory > 0">Almost sold out!</p>
+            <p v-if="inStock">In Stock</p>
             <p v-else>Out of Stock</p>
             <ul>
               <li v-for="detail in details">{{ detail }}</li>
