--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./assets/styles.css" />
     <!-- Import Vue.js -->
     <script src="https://unpkg.com/vue@3.0.11/dist/vue.global.js"></script>
+    
   </head>
   <body>
     <div id="app">
@@ -21,6 +22,7 @@
           </div>
           <div class="product-info">
             <h1>{{ title }}</h1>
+            <p class="promo" v-if="onSale">{{ saleMessage }}</p>
             <p v-if="inStock">In Stock</p>
             <p v-else>Out of Stock</p>
             <ul>
@@ -29,9 +31,9 @@
 
             <div 
               class="color-circle" 
-              v-for="variant in variants" 
+              v-for="(variant, index, sale) in variants" 
               :key="variant.id" 
-              @mouseover="updateImage(variant.image)" 
+              @mouseover="updateVariant(index)" 
               :style="{ backgroundColor: variant.color }"></div>
             <button class="button" :class="{ disabledButton: !inStock }" :disabled="!inStock" v-on:click="addToCart">Add to Cart</button>
           </div>
