v-if removed from saleMessage

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           </div>
           <div class="product-info">
             <h1>{{ title }}</h1>
-            <p class="promo" v-if="onSale">{{ saleMessage }}</p>
+            <p class="promo">{{ saleMessage }}</p>
             <p v-if="inStock">In Stock</p>
             <p v-else>Out of Stock</p>
             <ul>
