--- a/index.html
+++ b/index.html
@@ -10,10 +10,23 @@
   </head>
   <body>
     <div id="app">
-      <h1>Product goes here</h1>
+      <h1>{{product}}</h1>
+      <p>{{description}}</p>
     </div>
 
-    <!-- Import Js -->
+    <!-- Import App -->
     <script src="./main.js"></script>
+
+    <!-- Mount App -->
+
+    <script>
+
+      const mountApp = app.mount('#app')
+
+    </script>
+
+
+
+
   </body>
 </html>
