--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
       <h1>{{product}}</h1>
       <p>{{description}}</p>
     </div>
+    
 
-    <!-- Import App -->
+    <!-- Import Applivcation -->
     <script src="./main.js"></script>
 
     <!-- Mount App -->
