--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
   <body>
     <div id="app">
       <div class="nav-bar"></div>
-      
+
       <div class="product-display">
         <div class="product-container">
           <div class="product-image">
             <!-- image goes here -->
+            <img v-bind:src="image" />
+            <!--solution-->
+            <a :href="url">Learning Vue</a>
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
@@ -29,7 +32,7 @@
 
     <!-- Mount App -->
     <script>
-      const mountedApp = app.mount('#app')
+      const mountedApp = app.mount("#app");
     </script>
   </body>
 </html>
