--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div id="app">
       <div class="nav-bar"></div>
-      
+
       <div class="product-display">
         <div class="product-container">
           <div class="product-image">
@@ -19,6 +19,7 @@
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
+            <h2>{{product}}</h2>
           </div>
         </div>
       </div>
@@ -29,7 +30,7 @@
 
     <!-- Mount App -->
     <script>
-      const mountedApp = app.mount('#app')
+      const mountedApp = app.mount("#app");
     </script>
   </body>
 </html>
