Edit base templates

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   </head>
   <body>
     <div id="app">
-      <h1>Product goes here</h1>
+      <h1>{{ product }}</h1>
     </div>
 
-    <!-- Import Js -->
+    <!-- Import APP -->
     <script src="./main.js"></script>
   </body>
 </html>
