Modify index page

--- a/index.html
+++ b/index.html
@@ -15,5 +15,10 @@
 
     <!-- Import APP -->
     <script src="./main.js"></script>
+
+    <!-- Mount APP -->
+    <!-- <script>
+      const mountedApp = app.mount('#app')
+    </script> -->
   </body>
 </html>
