--- a/index.html
+++ b/index.html
@@ -28,12 +28,11 @@
             </ul>
             <div v-for="variant in variants" :key="variant.id" @mouseover="updateImage(variant.image)">{{ variant.color }}</div>
             <button class="button" v-on:click="addToCart">Add to Cart</button>
-            <!-- solution -->
             <button class="button" @click="removeFromCart">Remove Item</button>
-            <!-- solution -->
+            <a v-bind:href="rickRoll"><button class="button" v-on:click="">Buy all from cart</button></a>  
           </div>
         </div>
-      </div>
+      </div> 
     </div>
 
     <!-- Import App -->
