--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
   </head>
   <body>
     <div id="app">
-      <h1>Product goes here</h1>
+      <h1>{{Product }}</h1>
     </div>
 
     <!-- Import Js -->
     <script src="./main.js"></script>
+<!-- Mount App -->
+<script>
+  const mountedApp = app.mount('#app')
+</script>
   </body>
 </html>
