fixed the typo on handle bars

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   </head>
   <body>
     <div id="app">
-      <h1>{{Product }}</h1>
+      <h1>{{product }}</h1>
     </div>
 
     <!-- Import Js -->
-    <script src="./main.js"></script>
+    <script src="main.js"></script>
 <!-- Mount App -->
 <script>
-  const mountedApp = app.mount('#app')
+  const mountedApp = app.mount('#app');
 </script>
   </body>
 </html>
