--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
-            <!-- solution -->
-            <a :href="url">Made by Vue Mastery</a>
-           <!-- solution -->
+            <p v-if="inventory > 10">In Stock</p>
+            <p v-else-if="inventory <= 10 && inventory > 0">Almost sold out!</p>
+            <p v-else>Out of Stock</p>
+            <p v-if="onSale">On Sale</p>
           </div>
         </div>
       </div>
