--- a/index.html
+++ b/index.html
@@ -6,14 +6,19 @@
     <!-- Import Styles -->
     <link rel="stylesheet" href="./assets/styles.css" />
     <!-- Import Vue.js -->
-    <script src="https://unpkg.com/vue@3.0.0-beta.12/dist/vue.global.js"></script>
+    <script src="https://unpkg.com/vue@next"></script>
   </head>
   <body>
-    <div id="app">
-      <h1>Product goes here</h1>
-    </div>
+      <div id="app">
+          <h1>{{ product }}</h1>
+          <p>{{ productDescription }}</p>
+      </div>
 
-    <!-- Import Js -->
-    <script src="./main.js"></script>
+      <!-- Import App -->
+      <script src="./main.js"></script>
+      <!-- Mountt App -->
+      <script>
+          const mountedApp = app.mount('#app');
+      </script>
   </body>
 </html>
