--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
   </head>
   <body>
     <div id="app">
-      <h1>Product goes here</h1>
+      <h1>{{product}}</h1>
+      <h1>{{description}}</h1>
     </div>
 
     <!-- Import Js -->
     <script src="./main.js"></script>
     <!-- hey there -->
+    <script>
+      const mountedApp = app.mount("#app");
+    </script>
   </body>
 </html>
